# notifications_sprint_1

./: .env.example  .flake8  .gitignore  Makefile  Readme.md  docker-compose.mongo.yml  docker-compose.yml  mypy.ini  setup.cfg
.github/workflows/: main.yml
admin/: Dockerfile  db.sqlite3  pyproject.toml  start.sh
admin/admin/: settings.py
admin/core/: asgi.py  settings.py  urls.py  wsgi.py
admin/notifications/: admin.py  enums.py  models.py  tasks.py
admin/notifications/migrations/: 0001_initial.py  0002_alter_notificationtouser_retry_count.py  0003_alter_notification_type_and_more.py  0004_notification_is_recurring_and_more.py  0005_alter_notification_recurrence_rule.py  0006_notification_delivery_method.py
admin/users/: admin.py  models.py
admin/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0003_alter_user_options_alter_user_table.py
nginx/: nginx.conf
nginx/configs/: site.conf
notification_service/: Dockerfile  main.py  requirements.txt
notification_service/core/: config.py  logger.py
notification_service/db/: db.py  mongo.py
notification_service/dependencies/: main.py  registrator.py
notification_service/models/: base_model.py  db_models.py  event.py  notification.py
notification_service/schemas/: notification.py
notification_service/scripts/: add_shards.sh  init_config_replica.sh  init_mongo_user.sh  init_pg.sh  init_pg.sql  (+2 more)
websockets/: docker-entrypoint.sh  pyproject.toml
worker/: Dockerfile  requirements.txt
ws/: Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
ws/api/v1/: websocket.py
ws/core/: config.py  gunicorn_conf.py
ws/queues/: rabbitmq.py  send_message.py
ws/services/: manager.py  rabbitmq.py
(+21 files in other folders)
