[tool.poetry]
name = "admin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
flake8-html = "^0.4.3"
django-celery-beat = "^2.7.0"
django-celery-results = "^2.5.1"
django-redis = "^5.4.0"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
channels = "^4.1.0"
channels-redis = "^4.2.0"
djangochannelsrestframework = "^1.2.0"
responses = "^0.25.3"
daphne = "^4.1.2"
amqp = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
